// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component local props should override style props on theme 1`] = `
<Text
  style={
    Object {
      "color": "black",
      "fontSize": 43.714285714285715,
    }
  }
>
  Hey
</Text>
`;

exports[`Text Component should render without issues 1`] = `
<Text
  style={
    Object {
      "color": "black",
    }
  }
/>
`;

exports[`Text Component should use values from the theme 1`] = `
<Text
  style={
    Object {
      "color": "black",
      "fontSize": 28.285714285714285,
    }
  }
>
  Hey
</Text>
`;
